add auto import , upgrade element version

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -214,3 +214,8 @@ input::-webkit-inner-spin-button {
 .el-button--primary {
   background: #0581f5 !important;
 }
+
+.dialog-footer {
+  text-align: center;
+  margin: 0 auto;
+}
